--- a/[0] Butterer.ipynb
+++ b/[0] Butterer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "821a5294",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# === Parameters ===\n",
-    "input_folder = \"2025\"    # <-- change this\n",
+    "input_folder = \"Raw Input\"    # <-- change this\n",
     "output_folder = \"Peakfinder Input\"\n",
     "psd_folder = \"[0] PSD_plots\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
