--- a/[2] Analyzer.ipynb
+++ b/[2] Analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "d2625f38",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "63b29cb2",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "2639a27f",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "3ed3c6e9",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "0c9ceae7",
    "metadata": {},
    "outputs": [
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "7af87d11",
    "metadata": {},
    "outputs": [
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "6053ddc3",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "353e0f34",
    "metadata": {},
    "outputs": [
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "766c077f",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "a0106de0",
    "metadata": {},
    "outputs": [
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "a300e8f9",
    "metadata": {},
    "outputs": [
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "aceecb7c",
    "metadata": {},
    "outputs": [
@@ -2732,20 +2732,7 @@
       "AUC             quantile  : p=2.367e-04 NOT normal\n",
       "AUC             power     : p=3.564e-01 normal\n",
       "\n",
-      "Sex: male, Date: June26\n",
-      "reactionTime    original  : p=1.069e-15 NOT normal\n",
-      "reactionTime    gamma     : p=1.069e-15 NOT normal\n",
-      "reactionTime    weibull   : p=1.069e-15 NOT normal\n",
-      "reactionTime    boxcox    : p=1.000e+00 normal\n",
-      "reactionTime    lognorm   : p=1.069e-15 NOT normal\n",
-      "reactionTime    student_t : p=1.069e-15 NOT normal\n",
-      "reactionTime    yeojohnson: p=1.069e-15 NOT normal\n",
-      "reactionTime    log       : p=1.069e-15 NOT normal\n",
-      "reactionTime    sqrt      : p=1.069e-15 NOT normal\n",
-      "reactionTime    zscore    : p=1.069e-15 NOT normal\n",
-      "reactionTime    minmax    : p=1.069e-15 NOT normal\n",
-      "reactionTime    quantile  : p=1.069e-15 NOT normal\n",
-      "reactionTime    power     : p=1.069e-15 NOT normal\n"
+      "Sex: male, Date: June26\n"
      ]
     },
     {
@@ -2760,6 +2747,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "reactionTime    original  : p=1.069e-15 NOT normal\n",
+      "reactionTime    gamma     : p=1.069e-15 NOT normal\n",
+      "reactionTime    weibull   : p=1.069e-15 NOT normal\n",
+      "reactionTime    boxcox    : p=1.000e+00 normal\n",
+      "reactionTime    lognorm   : p=1.069e-15 NOT normal\n",
+      "reactionTime    student_t : p=1.069e-15 NOT normal\n",
+      "reactionTime    yeojohnson: p=1.069e-15 NOT normal\n",
+      "reactionTime    log       : p=1.069e-15 NOT normal\n",
+      "reactionTime    sqrt      : p=1.069e-15 NOT normal\n",
+      "reactionTime    zscore    : p=1.069e-15 NOT normal\n",
+      "reactionTime    minmax    : p=1.069e-15 NOT normal\n",
+      "reactionTime    quantile  : p=1.069e-15 NOT normal\n",
+      "reactionTime    power     : p=1.069e-15 NOT normal\n",
       "peakTime        original  : p=1.746e-03 NOT normal\n",
       "peakTime        gamma     : p=9.183e-04 NOT normal\n",
       "peakTime        weibull   : p=7.456e-04 NOT normal\n",
@@ -3068,7 +3068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "a6566bf5",
    "metadata": {},
    "outputs": [
@@ -3104,7 +3104,13 @@
       "Sex: female, Date: May20\n",
       "reactionTime   : p=1.069e-15 NOT normal\n",
       "peakTime       : p=1.185e-02 NOT normal\n",
-      "difference     : p=7.479e-03 NOT normal"
+      "difference     : p=7.479e-03 NOT normal\n",
+      "peakValue      : p=1.124e-01 normal\n",
+      "PTPA           : p=6.289e-02 normal\n",
+      "PTTA           : p=6.534e-02 normal\n",
+      "RMS            : p=1.758e-01 normal\n",
+      "tau            : p=8.921e-01 normal\n",
+      "AUC            : p=5.199e-01 normal\n"
      ]
     },
     {
@@ -3119,13 +3125,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "peakValue      : p=1.124e-01 normal\n",
-      "PTPA           : p=6.289e-02 normal\n",
-      "PTTA           : p=6.534e-02 normal\n",
-      "RMS            : p=1.758e-01 normal\n",
-      "tau            : p=8.921e-01 normal\n",
-      "AUC            : p=5.199e-01 normal\n",
       "\n",
       "Sex: male, Date: April16\n",
       "reactionTime   : p=1.468e-13 NOT normal\n",
@@ -3210,7 +3209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "8acd7d7b",
    "metadata": {},
    "outputs": [
@@ -3314,7 +3313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "e620ed19",
    "metadata": {},
    "outputs": [
@@ -3483,8 +3482,7 @@
       "tau: KS stat=0.138, p=2.305e-01 uniform\n",
       "AUC: KS stat=0.172, p=7.107e-02 uniform\n",
       "\n",
-      "Sex: female, Date: May20\n",
-      "reactionTime: KS stat=0.963, p=1.017e-77 NOT uniform"
+      "Sex: female, Date: May20\n"
      ]
     },
     {
@@ -3501,7 +3499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "reactionTime: KS stat=0.963, p=1.017e-77 NOT uniform\n",
       "peakTime: KS stat=0.270, p=5.649e-04 NOT uniform\n",
       "difference: KS stat=0.281, p=2.891e-04 NOT uniform\n",
       "peakValue: KS stat=0.132, p=2.805e-01 uniform\n",
@@ -3531,21 +3529,7 @@
       "PTTA: KS stat=0.225, p=7.088e-03 NOT uniform\n",
       "RMS: KS stat=0.149, p=1.634e-01 uniform\n",
       "tau: KS stat=0.285, p=2.243e-04 NOT uniform\n",
-      "AUC: KS stat=0.100, p=6.129e-01 uniform\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Galahad\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:2148: RuntimeWarning: invalid value encountered in divide\n",
-      "  x = np.asarray((x - loc)/scale, dtype=dtyp)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "AUC: KS stat=0.100, p=6.129e-01 uniform\n",
       "\n",
       "Sex: male, Date: May20\n",
       "reactionTime: KS stat=0.907, p=3.146e-56 NOT uniform\n",
@@ -3580,7 +3564,22 @@
       "PTTA: KS stat=0.217, p=1.026e-02 NOT uniform\n",
       "RMS: KS stat=0.186, p=4.163e-02 NOT uniform\n",
       "tau: KS stat=0.142, p=2.065e-01 uniform\n",
-      "AUC: KS stat=0.096, p=6.705e-01 uniform\n",
+      "AUC: KS stat=0.096, p=6.705e-01 uniform"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Galahad\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:2148: RuntimeWarning: invalid value encountered in divide\n",
+      "  x = np.asarray((x - loc)/scale, dtype=dtyp)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "\n",
       "Sex: female, Date: May20\n",
       "reactionTime: KS stat=0.963, p=1.017e-77 NOT uniform\n",
@@ -4126,8 +4125,7 @@
       "tau: KS stat=0.138, p=2.343e-01 uniform\n",
       "AUC: KS stat=0.172, p=7.112e-02 uniform\n",
       "\n",
-      "Sex: female, Date: May20\n",
-      "reactionTime: KS stat=0.963, p=1.017e-77 NOT uniform\n"
+      "Sex: female, Date: May20\n"
      ]
     },
     {
@@ -4248,6 +4246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "reactionTime: KS stat=0.963, p=1.017e-77 NOT uniform\n",
       "peakTime: KS stat=0.270, p=5.577e-04 NOT uniform\n",
       "difference: KS stat=0.281, p=2.835e-04 NOT uniform\n",
       "peakValue: KS stat=0.132, p=2.764e-01 uniform\n",
@@ -4520,7 +4519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "269c2c32",
    "metadata": {},
    "outputs": [
@@ -4560,7 +4559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "afd09866",
    "metadata": {},
    "outputs": [
@@ -4672,7 +4671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "731ebc7b",
    "metadata": {},
    "outputs": [
