--- a/[5] percentPPI_Tester.ipynb
+++ b/[5] percentPPI_Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "95349ed7",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "7d76bf21",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "id": "9936bc9f",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "22717cf6",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "287783ad",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "1962d5e9",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "c21e8eff",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "50d8ec49",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "id": "074f437b",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "e1d97e5f",
    "metadata": {},
    "outputs": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "id": "f4bbc41c",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "f416102d",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "fb6e85ba",
    "metadata": {},
    "outputs": [
@@ -989,8 +989,8 @@
      "text": [
       "\n",
       "Checking for trends in negative %PPI cases for gap_duration experiments:\n",
-      "Negative %PPI by date: {'May20': 7, 'April16': 3, 'June26': 3}\n",
-      "Negative %PPI by sex: {'female': 6, 'male': 7}\n"
+      "Negative %PPI by date: {'April16': 3, 'May20': 7, 'June26': 3}\n",
+      "Negative %PPI by sex: {'male': 7, 'female': 6}\n"
      ]
     }
    ],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "137e21d6",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "id": "fac86060",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "3dc6c991",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1348,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_29928\\741529974.py:53: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_10604\\741529974.py:53: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  avg_ppi = all_ppi_df.groupby(\"experiment\")[\"ppi\"].mean().reindex(experiment_order)\n"
      ]
     },
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "id": "282f7a0a",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "id": "f57393f8",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1525,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_29928\\2551100096.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_10604\\2551100096.py:4: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  ppi_groups = [group[\"ppi\"].dropna().values for _, group in all_ppi_df.groupby(\"experiment\") if len(group) > 1]\n"
      ]
     }
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "931366fe",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "id": "0a7b91d4",
    "metadata": {},
    "outputs": [
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "id": "d172e2c2",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1745,7 @@
        "0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "id": "cf69c34c",
    "metadata": {},
    "outputs": [
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "id": "51cf3855",
    "metadata": {},
    "outputs": [
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "id": "cbd679bf",
    "metadata": {},
    "outputs": [
