--- a/[6] Tester.ipynb
+++ b/[6] Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "id": "9d9fec4f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "id": "dc636f27",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "id": "db90de9e",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "id": "c5449a59",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "2b0b3480",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "id": "58866a2e",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "id": "997a0fca",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "id": "6a02d00c",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "id": "c5d8a594",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "id": "addc53a5",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "id": "832e400c",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "id": "49d0519d",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "id": "f5cf8e21",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "id": "d5f5be70",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "id": "dab7a230",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "id": "87777f44",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 17,
    "id": "4156698d",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "id": "87b3a0d7",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "id": "9b67e203",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "id": "940615f9",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 21,
    "id": "5bf9c43b",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "id": "d4e792bb",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 23,
    "id": "aa747891",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "id": "a4b5db5c",
    "metadata": {},
    "outputs": [
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 25,
    "id": "58d67f90",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 26,
    "id": "850548f0",
    "metadata": {},
    "outputs": [
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 27,
    "id": "a0c6bf48",
    "metadata": {},
    "outputs": [
@@ -2277,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 28,
    "id": "614e3457",
    "metadata": {},
    "outputs": [
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 29,
    "id": "1b05ecbc",
    "metadata": {},
    "outputs": [
@@ -2563,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 30,
    "id": "7c011638",
    "metadata": {},
    "outputs": [
@@ -2600,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 31,
    "id": "7390d87d",
    "metadata": {},
    "outputs": [
@@ -2649,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 32,
    "id": "467706df",
    "metadata": {},
    "outputs": [
@@ -2717,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 33,
    "id": "0db07a64",
    "metadata": {},
    "outputs": [
@@ -2779,7 +2779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 34,
    "id": "2dc10f76",
    "metadata": {},
    "outputs": [
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 35,
    "id": "e4efb02b",
    "metadata": {},
    "outputs": [
@@ -3001,7 +3001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 36,
    "id": "0d700d07",
    "metadata": {},
    "outputs": [
@@ -3086,7 +3086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 37,
    "id": "531c68d3",
    "metadata": {},
    "outputs": [
@@ -3153,7 +3153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 38,
    "id": "45fc662d",
    "metadata": {},
    "outputs": [
@@ -3229,7 +3229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 39,
    "id": "0ca23586",
    "metadata": {},
    "outputs": [
@@ -3237,7 +3237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_5792\\2571273719.py:32: RuntimeWarning: Mean of empty slice\n",
+      "C:\\Users\\Galahad\\AppData\\Local\\Temp\\ipykernel_26040\\2571273719.py:32: RuntimeWarning: Mean of empty slice\n",
       "  avg_heatmap = np.nanmean(np.stack([m.values for m in pivoted]), axis=0)\n"
      ]
     },
@@ -3315,7 +3315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 40,
    "id": "6595c27b",
    "metadata": {},
    "outputs": [
@@ -3581,7 +3581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 41,
    "id": "3c0deb6c",
    "metadata": {},
    "outputs": [
@@ -3652,7 +3652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 42,
    "id": "b7aa21c9",
    "metadata": {},
    "outputs": [
@@ -3952,7 +3952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 43,
    "id": "d4db6693",
    "metadata": {},
    "outputs": [
@@ -4257,7 +4257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 44,
    "id": "241a2110",
    "metadata": {},
    "outputs": [
@@ -4273,7 +4273,10 @@
       "female, difference: gap_depth vs tone_in_noise | stat_range=(-3.39--3.39), p_range=(4.361e-03-4.361e-03), mean_diff_range=(-3.27--3.27)\n",
       "female, peakValue: gap_depth vs tone_in_noise | stat_range=(2.59-2.59), p_range=(2.185e-02-2.185e-02), mean_diff_range=(11.54-11.54)\n",
       "female, PTPA: gap_depth vs tone_in_noise | stat_range=(2.54-2.54), p_range=(2.485e-02-2.485e-02), mean_diff_range=(11.22-11.22)\n",
-      "female, PTTA: gap_depth vs tone_in_noise | stat_range=(2.36-2.36), p_range=(3.466e-02-3.466e-02), mean_diff_range=(10.51-10.51)\n"
+      "female, PTTA: gap_depth vs tone_in_noise | stat_range=(2.36-2.36), p_range=(3.466e-02-3.466e-02), mean_diff_range=(10.51-10.51)\n",
+      "female, RMS: gap_depth vs tone_in_noise | stat_range=(3.07-3.07), p_range=(9.319e-03-9.319e-03), mean_diff_range=(4.52-4.52)\n",
+      "female, tau: gap_depth vs tone_in_noise | stat_range=(5.11-5.11), p_range=(1.630e-04-1.630e-04), mean_diff_range=(9.52-9.52)\n",
+      "female, AUC: gap_depth vs tone_in_noise | stat_range=(3.28-3.28), p_range=(8.276e-03-8.276e-03), mean_diff_range=(646.91-646.91)\n"
      ]
     },
     {
@@ -4288,9 +4291,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "female, RMS: gap_depth vs tone_in_noise | stat_range=(3.07-3.07), p_range=(9.319e-03-9.319e-03), mean_diff_range=(4.52-4.52)\n",
-      "female, tau: gap_depth vs tone_in_noise | stat_range=(5.11-5.11), p_range=(1.630e-04-1.630e-04), mean_diff_range=(9.52-9.52)\n",
-      "female, AUC: gap_depth vs tone_in_noise | stat_range=(3.28-3.28), p_range=(8.276e-03-8.276e-03), mean_diff_range=(646.91-646.91)\n",
       "female, peakTime: gap_duration vs offset_PPI | stat_range=(-3.31--0.19), p_range=(5.779e-03-8.543e-01), mean_diff_range=(-3.37--0.30)\n",
       "female, difference: gap_duration vs offset_PPI | stat_range=(-3.31--0.16), p_range=(5.779e-03-8.723e-01), mean_diff_range=(-3.37--0.27)\n",
       "female, tau: gap_duration vs offset_PPI | stat_range=(0.25-3.00), p_range=(1.043e-02-8.035e-01), mean_diff_range=(0.79-7.47)\n",
@@ -4341,7 +4341,8 @@
       "male, tau: offset_PPI vs tone_in_noise | stat_range=(-1.00-3.11), p_range=(7.278e-03-3.467e-01), mean_diff_range=(-42266.60-128265.18)\n",
       "male, AUC: offset_PPI vs tone_in_noise | stat_range=(1.49-2.56), p_range=(2.161e-02-1.600e-01), mean_diff_range=(732.28-1136.43)\n",
       "\n",
-      "--- OFFSET_PPI (DATES MERGED, VARIANTS MERGED, PARAMETRIC) ---\n"
+      "--- OFFSET_PPI (DATES MERGED, VARIANTS MERGED, PARAMETRIC) ---\n",
+      "female, peakTime: gap_depth vs offset_PPI | stat_range=(-3.36--0.78), p_range=(5.022e-03-4.497e-01), mean_diff_range=(-3.12--1.14)\n"
      ]
     },
     {
@@ -4356,7 +4357,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "female, peakTime: gap_depth vs offset_PPI | stat_range=(-3.36--0.78), p_range=(5.022e-03-4.497e-01), mean_diff_range=(-3.12--1.14)\n",
       "female, difference: gap_depth vs offset_PPI | stat_range=(-3.36--0.75), p_range=(5.022e-03-4.675e-01), mean_diff_range=(-3.12--1.11)\n",
       "female, peakTime: gap_depth vs tone_in_noise | stat_range=(-3.39--3.39), p_range=(4.361e-03-4.361e-03), mean_diff_range=(-3.27--3.27)\n",
       "female, difference: gap_depth vs tone_in_noise | stat_range=(-3.39--3.39), p_range=(4.361e-03-4.361e-03), mean_diff_range=(-3.27--3.27)\n",
@@ -4466,7 +4466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 45,
    "id": "6d6a2b78",
    "metadata": {},
    "outputs": [
@@ -4583,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 46,
    "id": "fa23e2a6",
    "metadata": {},
    "outputs": [
@@ -4644,7 +4644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 47,
    "id": "675ddb7e",
    "metadata": {},
    "outputs": [
@@ -4708,7 +4708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 48,
    "id": "18b462ef",
    "metadata": {},
    "outputs": [
@@ -4764,7 +4764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 49,
    "id": "2449bb5d",
    "metadata": {},
    "outputs": [
@@ -4842,7 +4842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 50,
    "id": "b90c1458",
    "metadata": {},
    "outputs": [
